// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse_int with non-integer arg radix throws error: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "parse_int(42, 2.1);",
  "displayResult": Array [],
  "errors": Array [
    CallingNonFunctionValue {
      "callee": Thunk {
        "supplier": [Function],
      },
      "location": SourceLocation {
        "end": Position {
          "column": 18,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "node": Node {
        "arguments": Array [
          Node {
            "end": 12,
            "loc": SourceLocation {
              "end": Position {
                "column": 12,
                "line": 1,
              },
              "start": Position {
                "column": 10,
                "line": 1,
              },
            },
            "raw": "42",
            "start": 10,
            "type": "Literal",
            "value": 42,
          },
          Node {
            "end": 17,
            "loc": SourceLocation {
              "end": Position {
                "column": 17,
                "line": 1,
              },
              "start": Position {
                "column": 14,
                "line": 1,
              },
            },
            "raw": "2.1",
            "start": 14,
            "type": "Literal",
            "value": 2.1,
          },
        ],
        "callee": Node {
          "end": 9,
          "loc": SourceLocation {
            "end": Position {
              "column": 9,
              "line": 1,
            },
            "start": Position {
              "column": 0,
              "line": 1,
            },
          },
          "name": "parse_int",
          "start": 0,
          "type": "Identifier",
        },
        "end": 18,
        "loc": SourceLocation {
          "end": Position {
            "column": 18,
            "line": 1,
          },
          "start": Position {
            "column": 0,
            "line": 1,
          },
        },
        "start": 0,
        "type": "CallExpression",
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 1: Calling non-function value { \\"supplier\\":
    function* () {
                return v;
            } }.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`parse_int with non-string arg str throws error: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "parse_int(42, 2);",
  "displayResult": Array [],
  "errors": Array [
    CallingNonFunctionValue {
      "callee": Thunk {
        "supplier": [Function],
      },
      "location": SourceLocation {
        "end": Position {
          "column": 16,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "node": Node {
        "arguments": Array [
          Node {
            "end": 12,
            "loc": SourceLocation {
              "end": Position {
                "column": 12,
                "line": 1,
              },
              "start": Position {
                "column": 10,
                "line": 1,
              },
            },
            "raw": "42",
            "start": 10,
            "type": "Literal",
            "value": 42,
          },
          Node {
            "end": 15,
            "loc": SourceLocation {
              "end": Position {
                "column": 15,
                "line": 1,
              },
              "start": Position {
                "column": 14,
                "line": 1,
              },
            },
            "raw": "2",
            "start": 14,
            "type": "Literal",
            "value": 2,
          },
        ],
        "callee": Node {
          "end": 9,
          "loc": SourceLocation {
            "end": Position {
              "column": 9,
              "line": 1,
            },
            "start": Position {
              "column": 0,
              "line": 1,
            },
          },
          "name": "parse_int",
          "start": 0,
          "type": "Identifier",
        },
        "end": 16,
        "loc": SourceLocation {
          "end": Position {
            "column": 16,
            "line": 1,
          },
          "start": Position {
            "column": 0,
            "line": 1,
          },
        },
        "start": 0,
        "type": "CallExpression",
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 1: Calling non-function value { \\"supplier\\":
    function* () {
                return v;
            } }.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`parse_int with radix outside [2, 36] throws error, radix=1: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "parse_int('10', 1);",
  "displayResult": Array [],
  "errors": Array [
    CallingNonFunctionValue {
      "callee": Thunk {
        "supplier": [Function],
      },
      "location": SourceLocation {
        "end": Position {
          "column": 18,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "node": Node {
        "arguments": Array [
          Node {
            "end": 14,
            "loc": SourceLocation {
              "end": Position {
                "column": 14,
                "line": 1,
              },
              "start": Position {
                "column": 10,
                "line": 1,
              },
            },
            "raw": "'10'",
            "start": 10,
            "type": "Literal",
            "value": "10",
          },
          Node {
            "end": 17,
            "loc": SourceLocation {
              "end": Position {
                "column": 17,
                "line": 1,
              },
              "start": Position {
                "column": 16,
                "line": 1,
              },
            },
            "raw": "1",
            "start": 16,
            "type": "Literal",
            "value": 1,
          },
        ],
        "callee": Node {
          "end": 9,
          "loc": SourceLocation {
            "end": Position {
              "column": 9,
              "line": 1,
            },
            "start": Position {
              "column": 0,
              "line": 1,
            },
          },
          "name": "parse_int",
          "start": 0,
          "type": "Identifier",
        },
        "end": 18,
        "loc": SourceLocation {
          "end": Position {
            "column": 18,
            "line": 1,
          },
          "start": Position {
            "column": 0,
            "line": 1,
          },
        },
        "start": 0,
        "type": "CallExpression",
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 1: Calling non-function value { \\"supplier\\":
    function* () {
                return v;
            } }.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`parse_int with radix outside [2, 36] throws error, radix=37: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "parse_int('10', 37);",
  "displayResult": Array [],
  "errors": Array [
    CallingNonFunctionValue {
      "callee": Thunk {
        "supplier": [Function],
      },
      "location": SourceLocation {
        "end": Position {
          "column": 19,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "node": Node {
        "arguments": Array [
          Node {
            "end": 14,
            "loc": SourceLocation {
              "end": Position {
                "column": 14,
                "line": 1,
              },
              "start": Position {
                "column": 10,
                "line": 1,
              },
            },
            "raw": "'10'",
            "start": 10,
            "type": "Literal",
            "value": "10",
          },
          Node {
            "end": 18,
            "loc": SourceLocation {
              "end": Position {
                "column": 18,
                "line": 1,
              },
              "start": Position {
                "column": 16,
                "line": 1,
              },
            },
            "raw": "37",
            "start": 16,
            "type": "Literal",
            "value": 37,
          },
        ],
        "callee": Node {
          "end": 9,
          "loc": SourceLocation {
            "end": Position {
              "column": 9,
              "line": 1,
            },
            "start": Position {
              "column": 0,
              "line": 1,
            },
          },
          "name": "parse_int",
          "start": 0,
          "type": "Identifier",
        },
        "end": 19,
        "loc": SourceLocation {
          "end": Position {
            "column": 19,
            "line": 1,
          },
          "start": Position {
            "column": 0,
            "line": 1,
          },
        },
        "start": 0,
        "type": "CallExpression",
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 1: Calling non-function value { \\"supplier\\":
    function* () {
                return v;
            } }.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`parse_int with string arg radix throws error: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "parse_int(42, '2');",
  "displayResult": Array [],
  "errors": Array [
    CallingNonFunctionValue {
      "callee": Thunk {
        "supplier": [Function],
      },
      "location": SourceLocation {
        "end": Position {
          "column": 18,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "node": Node {
        "arguments": Array [
          Node {
            "end": 12,
            "loc": SourceLocation {
              "end": Position {
                "column": 12,
                "line": 1,
              },
              "start": Position {
                "column": 10,
                "line": 1,
              },
            },
            "raw": "42",
            "start": 10,
            "type": "Literal",
            "value": 42,
          },
          Node {
            "end": 17,
            "loc": SourceLocation {
              "end": Position {
                "column": 17,
                "line": 1,
              },
              "start": Position {
                "column": 14,
                "line": 1,
              },
            },
            "raw": "'2'",
            "start": 14,
            "type": "Literal",
            "value": "2",
          },
        ],
        "callee": Node {
          "end": 9,
          "loc": SourceLocation {
            "end": Position {
              "column": 9,
              "line": 1,
            },
            "start": Position {
              "column": 0,
              "line": 1,
            },
          },
          "name": "parse_int",
          "start": 0,
          "type": "Identifier",
        },
        "end": 18,
        "loc": SourceLocation {
          "end": Position {
            "column": 18,
            "line": 1,
          },
          "start": Position {
            "column": 0,
            "line": 1,
          },
        },
        "start": 0,
        "type": "CallExpression",
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "parsedErrors": "Line 1: Calling non-function value { \\"supplier\\":
    function* () {
                return v;
            } }.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;
